--- a/resources/scss/partials/_comics.scss
+++ b/resources/scss/partials/_comics.scss
@@ -1,5 +1,9 @@
 @use './variables' as *;
 
+.comics-container {
+    background-color: #1C1C1C;
+}
+
 .text {
     width: 300px;
     height: 100%;
@@ -13,3 +17,62 @@
 img {
     max-width: 100%;
 }
+
+figure {
+    height: 300px;
+}
+
+figure img {
+    height: 100%;
+}
+
+.card-body {
+    font-size: 0.9rem;
+    font-weight: 800;
+}
+
+.more {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    padding: 20px;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    background-color: #0082f9;
+}
+
+
+.section-bottom {
+    background-color: #0082f9;
+    padding: 2rem;
+    position: relative;
+    z-index: 998;
+    .cta {
+      width: 70%;
+      margin: 0 auto;
+      ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        li {
+          list-style: none;
+          padding: 0 1rem;
+          a {
+            text-decoration: none;
+            color: inherit;
+            display: flex;
+            align-items: center;
+            font-size: 0.8rem;
+            img {
+              width: 50px;
+            }
+            p {
+              padding: 0 10px;
+              color: white;
+            }
+          }
+        }
+      }
+    }
+  }
